todo app complete

--- a/module-24/conceptual_session_Dom_event/todo.html
+++ b/module-24/conceptual_session_Dom_event/todo.html
@@ -24,8 +24,8 @@
         <button id="addBtn" class="btn btn-primary">Add Item</button>
       </div>
       <div>
-        <div class="overflow-x-auto">
-          <table class="table">
+        <div class="overflow-x-auto w-10/12">
+          <table class="table text-center">
             <!-- head -->
             <thead class="text-2xl font-bold text-black">
               <tr>
@@ -34,9 +34,9 @@
                 <th>Action</th>
               </tr>
             </thead>
-            <tbody id="tableBody">
+            <tbody id="tableBody" class="text-center">
               <!-- row 1 -->
-              <!-- <tr class="">
+              <!-- <tr class="line-through">
                 <th>1</th>
                 <td>Quality Control Specialist</td>
                 <td>
@@ -46,6 +46,9 @@
               </tr> -->
             </tbody>
           </table>
+          <div class="flex justify-center item-center mt-5">
+            <button id="clearBtn" class="btn btn-secondary">Clear All</button>
+          </div>
         </div>
       </div>
     </div>
